fix: 💄 change some home page intro body and sun ascii art text alignment and font sizes for mobile

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -534,7 +534,7 @@ body.crt-text-ca .command-bar * {
 
 @media (max-width: 480px) {
   .sun-pre {
-    font-size: 0.3rem;
+    font-size: 0.25rem;
     line-height: 1.15;
   }
 
