--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -135,6 +135,10 @@ $max-content-width: 500px;
     margin-top: -4rem
   }
 
+  .intro-body {
+    text-align: justify;
+  }
+
   .command-hints-grid {
     display: block; // Switch back to block layout
   }
